--- a/index.html
+++ b/index.html
@@ -8,43 +8,46 @@
 </head>
 <body>
     <div class="conteiner">
-        <div>
-            <img src="image/mohamed.png" alt="pool">
-        </div>
-        <header class="rooms">
-            <div class="head">
+        <div class="position">
+            <header class="rooms">
                 <h2>Zetta Hotels</h2>
-                <nav class="navbar">
-                    <ul>
-                        <li class="navbar-li">
-                            <a href=""#>Home</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="#">Rooms</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="#">Restaurant</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="#">About us</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="#">Blog</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="#">contact</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div class="head">
+                    <nav class="navbar">
+                        <ul>
+                            <li class="navbar-li">
+                                <a href=""#>Home</a>
+                            </li>
+                            <li class="navbar-li">
+                                <a href="#">Rooms</a>
+                            </li>
+                            <li class="navbar-li">
+                                <a href="#">Restaurant</a>
+                            </li>
+                            <li class="navbar-li">
+                                <a href="#">About us</a>
+                            </li>
+                            <li class="navbar-li">
+                                <a href="#">Blog</a>
+                            </li>
+                            <li class="navbar-li">
+                                <a href="#">contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>  
+            <div class="home">
+                <div class="main">
+                    <h1>Rooms</h1>
+                </div>
+                <div class="main-p">
+                    <p class="main-p1">Home</p>
+                    <p class="main-p2">Rooms</p>
+                </div>
             </div>
-        </header>
-        <div class="rooms">
-            <h1>Rooms</h1>
-            <p>Home</p>
-            <p>Rooms</p>
         </div>
     </div>
-    <div>
+    <div class="quality">
         <a href="#">ABOUT US</a>
         <h2>
             Trust and quality
@@ -56,20 +59,100 @@
     <section class="section">
         <div class="flex">
             <div class="box">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="box-block">
+                    <img src="image/deborah.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Big</a>
+                        <h2>Spacious Room</h2>
+                        <p>The most spacious room you will ever see in our hotel.
+                        Equipped with span and warm beds</p>
+                    </div> 
+                    <div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="box-block">
+                    <img src="image/minh.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Prremium</a>
+                        <h2>Big Room </h2>
+                        <p>Biggest room in our hotel fully equipped with Wi-fi and hot coffee</p>
+                    </div>
+                    <div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>     
+                <div class="box-block">
+                    <img src="image/deborah.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Big</a>
+                        <h2>Spacious Room</h2>
+                        <p>The most spacious room you will ever see in our hotel.Equipped with span and warm beds</p>
+                    </div>
+                    <div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>
             </div>
             <div class="box">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="box-block">
+                    <img src="image/jolly.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Small</a>
+                        <h2>Small Cheap Room</h2>
+                        <p>Smallest and the most economic room in our hotel. Save an extra buck for your holyday</p>
+                    </div>
+                    <div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="box-block">
+                    <img src="image/sven.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Expensive</a>
+                        <h2>Expensive Luxury Room</h2>
+                        <p>The most expensive room available for milionars and very rich people</p>
+                    </div>
+                    <div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="box-block">
+                    <img src="image/jolly.png" alt="room">
+                    <div class="hotel">
+                        <a href="#">Small</a>
+                        <h2>Small Cheap Room</h2>
+                        <p>Smallest and the most economic room in our hotel. Save an extra buck for your holyday</p>
+                    </div><div class="arrow">
+                        <img class="arrow" src="image/arrow.svg" alt="arrow">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <div class="conteiner">
-
-    </div>
+    <section class="label">
+        <div class="label">
+            <div>
+                <h3 class="titl-box">Check In Date</h3>
+                <input class="input" type="date" name="check in date">
+            </div>
+            <div>
+                <h3 class="titl-box">Check In Date</h3>
+                <input class="input" type="date" name="check in date">
+            </div>
+            <div>
+                <h3 class="titl-box">Rooms</h3>
+                <input class="input" type="text" name="rooms" >
+            </div>
+            <div class="send"> 
+                <button class="send1">submit
+                </button>
+                <div class="plane">
+                    <img class="plane1" src="image/send.svg" alt="icon">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
