--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
             </div>
             <div>
                 <h3 class="titl-box">Rooms</h3>
-                <input class="input" type="text" name="rooms" >
+                <label for="rooms"></label>
+                <input class="input" type="text" name="rooms"  id="chekbox">
             </div>
             <div class="send"> 
-                <button class="send1">submit
-                </button>
+                <button class="send1">submit</button>
                 <div class="plane">
                     <img class="plane1" src="image/send.svg" alt="icon">
                 </div>
@@ -154,21 +154,71 @@
         </div>
     </section>
     <footer>
-        <div>
-            <div>
+        <div class="conteiner">
+            <div class="flex-box">
+                <div class="first-child">
+                    <h3>Zetta Hotels</h3>
+                    <p>Our hotel is an image of quality and profesionalism</p>
+                    <p> combined with hard work and precision. </p>
+                    <p>You can expect only the best services from our staff.</p>
+                    <img src="image/facebook.svg" alt="icon">
+                    <img src="image/twitter.svg" alt="icon">
+                    <img src="image/google.svg" alt="icon">
+                    <p class="paragrap"> Copyright ©2020 All rights reserved | This template is made with love by Marian</p>
+                </div>
                 <nav>
+                    <h3>Useful links</h3>
                     <ul>
-                        <li >
-
+                        <li>
+                            <a href="#">Blog</a>
                         </li>
-
-
+                        <li>
+                            <a href="#">Rooms</a>
+                        </li>
+                        <li> 
+                            <a href="#">Gift Card</a>
+                        </li>
+                        <li>
+                            <a href="#">Testimonials</a>
+                        </li>
                     </ul>
                 </nav>
+                <nav>
+                    <h3>Privacy</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Career</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Services</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="contact">
+                    <h3>Contact Info</h3>
+                    <div class="contact-box">
+                        <img src="image/mail.svg" alt="icon">
+                        <p>example@yahoo.com</p>
+                    </div>
+                    <div class="contact-box">
+                        <img src="image/phone.svg" alt="icon">
+                        <p>+0 320 422 4254</p>
+                    </div>
+                    <div class="contact-box">
+                        <img src="image/Pat.svg" alt="icon">
+                        <p>Main Str Chicago Ilinois</p>
+                    </div>
+                    <div class="port">
+                        <a href="#">www.portfolioname.com</a>
+                    </div>
+                </div>
             </div>
-
-
-
         </div>
     </footer>
 </body>
